--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ textarea {
     background-color: #34db74;
     text-shadow: #2084c7 1px 1px 0;
     padding: 1em 0 !important;
-    color: white;
+    color: black;
     text-align: center;
     /* margin-top: 1em; */
     font-family: "Lato";
